--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,8 @@
 # example netlify.toml
 [build]
-  command = "npm run build"
+  command = "build"
   functions = "netlify/functions"
   publish = "build"
-
-  [[redirects]]
-    from = "/api/*"
-    to = "https://api.weatherapi.com/v1/:splat"
-    status = 200
-    force = true
-  
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
@@ -17,7 +10,6 @@
   #  from = "/*"
   #  to = "/index.html"
   #  status = 200
-  
 
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
